<resources>
    <string name="app_name">HimiChat</string>

    <string name="loading">Loading…</string>>
    <string name="find">Find</string>>
    <string name="profile">Profile</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="privacy">Privacy</string>
    <string name="design">Design</string>
    <string name="something">Something goes wrong</string>
    <string name="enter_msg">Enter message</string>
    <string name="day">day</string>
    <string name="night">night</string>
    <string name="theme">theme</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="web_client_id" translatable="false">195021957274-o2hlc401ln8feoplko4ql11gfc677q0o.apps.googleusercontent.com</string>
    <string name="himitsu_id" translatable="false">_himitsu_bot_</string>
    <string name="himitsu_avatar_url" translatable="false">https://firebasestorage.googleapis.com/v0/b/himichat-d3a97.appspot.com/o/avatars%2Fracoon.jpg?alt=media&amp;token=0a019989-9c1c-4048-821a-4053d68a380e</string>

    <string name="label_email">Email:</string>
    <string name="label_password">Password:</string>
    <string name="label_password_repeat">Repeat password:</string>
    <string name="label_nickname">Nickname:</string>
    <string name="label_real_name">Real name:</string>
    <string name="label_rename">Rename field:</string>
    <string name="label_empty_request_list">No requests</string>
    <string name="label_empty_friends_list">No friends</string>
    <string name="label_empty_users_list">No users for your request</string>
    <string name="label_empty_dialogues_list">Sorry, no dialogues yet\n¯\\_(ツ)_/¯</string>
    <string name="label_invalid_nickname">Invalid nickname</string>
    <string name="label_no_users_for_request">No users for your request</string>

    <string name="button_sign_out">sign out</string>
    <string name="button_delete_all_messages">delete all messages</string>
    <string name="button_sign_in">sign in</string>
    <string name="button_register">register</string>
    <string name="button_register_mode">I don\'t have account…</string>
    <string name="button_reset_password">Reset password</string>
    <string name="button_send_reset_request">Send reset password request to email</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_login_mode">I already have account…</string>
    <string name="button_find_friend">Find a friend</string>
    <string name="button_friend_requests">Friend requests</string>
    <string name="button_Invite">Invite</string>
    <string name="button_sent">Sent</string>
    <string name="button_received">Received</string>
    <string name="button_logout">Logout</string>>
    <string name="button_load_avatar">Load avatar</string>
    <string name="button_send_message">Send message</string>
    <string name="button_remove_friend">Remove friend</string>
    <string name="button_remove_favorite">Remove from favorite</string>
    <string name="button_add_favorite">Add to favorite</string>
    <string name="button_edit_profile">Edit profile</string>
    <string name="button_save_account_data">Save account data</string>
    <string name="loadRenameButton">Rename</string>

    <string name="context_menu_item_remove">Remove</string>
    <!--    <string name="context_menu_item_remove">Remove</string>-->
    <!--    <string name="context_menu_item_remove">Remove</string>-->


    <string name="toast_cant_reach_server">Server is not responding</string>
    <string name="toast_auth_error">Authentication failed.</string>
    <string name="toast_auth_error_wrong_password">Wrong password</string>
    <string name="toast_auth_error_user_doesnt_exist">User does\'nt exist</string>
    <string name="toast_nickname_not_valid">Nickname is not valid</string>
    <string name="toast_user_nickname_not_found">User with this nickname is not found</string>
    <string name="toast_no_found_user">You didn\'t found any users</string>
    <string name="toast_selfinvite">You can\'t invite yourself</string>
    <string name="toast_invite_successful">Invited</string>
    <string name="toast_invite_already">Already invited</string>
    <string name="toast_invite_already_you">This user is already invited you</string>
    <string name="toast_accept_invite_complete">added to your friend list</string>
    <string name="toast_accept_invite_error">error to accept invite of</string>
    <string name="toast_block_invite_complete">was blocked</string>
    <string name="toast_block_invite_error">error to block</string>
    <string name="toast_cancel_invite_complete">friend request was canceled</string>
    <string name="toast_cancel_invite_error">error to cancel friend request</string>
    <string name="toast_remove_friend_complete">friend was removed</string>
    <string name="toast_remove_friend_error">error to removing friend</string>
    <string name="toast_load_avatar_complete">avatar was loaded</string>
    <string name="toast_load_avatar_error">error to load avatar</string>
    <string name="toast_load_avatar_warning">loading avatar can take some time</string>
    <string name="toast_saving_account_success">Successfully saved account data</string>
    <string name="toast_saving_account_error">Error to save account data</string>
    <string name="toast_text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="toast_future_feature">Future feature</string>

    <string name="channel_name_messages">HimiChat messages</string>
    <string name="channel_name_invites">HimiChat invites</string>
    <string name="channel_description">Channel of receiving himichat messages</string>

    <string name="notification_invite">new invite</string>
    <string name="notification_invite_desc">You were invited to be friends by </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_dialogues">Dialogues</string>
    <string name="menu_dialog">Dialog</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_users">Users</string>
    <string name="menu_suggestions">Complaints and suggestions</string>
    <string name="menu_find_friend">Find friend</string>
    <string name="menu_friend_requests">Friend requests</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_repeat">Repeat password</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_realname">Real name</string>
    <string name="hint_search">Search</string>
    <string name="hint_search_by_nickname_or_realname">Search (nickname, real name)</string>
    <string name="avatar_content_description">Profile picture of user</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be more than 5 characters and less than 20 characters</string>
    <string name="invalid_password_repeat">Passwords must be same</string>
    <string name="invalid_realname">Real name is required</string>
    <string name="invalid_nickname">Nickname must be more than 3 characters and less than 20 characters</string>
    <string name="invalid_nickname_empty">Nickname can\'t be empty</string>
    <string name="invalid_nickname_not_unique">Nickname must be unique</string>
    <string name="login_failed">"Login failed"</string>

    <string name="himitsu_hello_message">Hello, i\'m a help bot. You can ask "help" for more information.</string>

    <string name="himitsu_bot_help_repeat">You can ask me: "Help", "Delete my account" or "Send message to author"</string>
    <string name="himitsu_bot_delete_account_repeat">So sad to hear that, but i\'ll do this. Goodbye.</string>
    <string name="himitsu_bot_yo_repeat">Yo mate!</string>
    <string name="himitsu_bot_hello_repeat">Hello, my friend!</string>

    <string name="himitsu_bot_message_to_author_start">You want to do this anonymous? (Say "yes" or "no")</string>
    <string name="himitsu_bot_message_to_author_help">You need to choose how i should send message to author. (Say "yes" to anonymous or "no" to show you as author)</string>
    <string name="himitsu_bot_message_to_author_text">Type your message and i will send it.</string>
    <string name="himitsu_bot_message_to_author_end">Your message was sent!</string>

    <string name="himitsu_bot_idk">Sorry, i can\'t understand you. Try to say "help".</string>
    <string-array name="himitsu_bot_help_command">
        <item>help</item>
    </string-array>
    <string-array name="himitsu_bot_yes_command">
        <item>yes</item>
    </string-array>
    <string-array name="himitsu_bot_no_command">
        <item>no</item>
    </string-array>
    <string-array name="himitsu_bot_delete_account_command">
        <item>delete my account</item>
    </string-array>
    <string-array name="himitsu_bot_yo_command">
        <item>yo</item>
    </string-array>
    <string-array name="himitsu_bot_hello_command">
        <item>hi</item>
        <item>hello</item>
    </string-array>
    <string-array name="himitsu_bot_message_to_author_command">
        <item>send message to author</item>
        <item>send my message to author</item>
    </string-array>
</resources>
