<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dialogues"
            android:icon="@drawable/ic_nav_dialogs"
            android:title="@string/menu_dialogues" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_nav_friends"
            android:title="@string/menu_friends"
            android:visible="true" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_nav_friends"
            android:title="@string/menu_users"
            android:visible="false" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/menu_settings"/>
    </group>

    <!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                    android:id="@+id/nav_share"-->
<!--                    android:icon="@drawable/ic_menu_share"-->
<!--                    android:title="@string/menu_share" />-->
<!--            <item-->
<!--                    android:id="@+id/nav_send"-->
<!--                    android:icon="@drawable/ic_menu_send"-->
<!--                    android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
