<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primaryDark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/primaryInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailRegisterEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:autofillHints="email"
                style="@style/primaryTextEditStyle" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            style="@style/primaryInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRegisterEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:autofillHints="password"
                style="@style/primaryTextEditStyle" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regPasswordRepeatInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            style="@style/primaryInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRepeatEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password_repeat"
                android:inputType="textPassword"
                android:visibility="visible"
                android:autofillHints="password"
                style="@style/primaryTextEditStyle" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regNicknameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/primaryInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nicknameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nickname"
                android:inputType="textPersonName"
                android:visibility="visible"
                style="@style/primaryTextEditStyle" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regRealnameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/primaryInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/realNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_realname"
                android:autofillHints="name"
                android:inputType="textPersonName"
                android:visibility="visible"
                style="@style/primaryTextEditStyle" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundcorner"
        android:enabled="false"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:text="@string/button_register"
        android:visibility="visible" />

    <Button
        android:id="@+id/loginModeButton"
        style="@style/TextButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/roundcorner"
        android:text="@string/button_login_mode"
        android:textSize="18sp"
        android:visibility="visible" />

</LinearLayout>